--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -5,6 +5,10 @@ h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, span {
   color: white;
 }
 
+header {
+  border: 2px solid purple;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
@@ -14,9 +18,21 @@ p, li, td, th, blockquote, label, input, textarea, select {
   line-height: 165%;
 }
 
-p {
+.header-p {
   margin-bottom: 1rem;
+  margin-top: 20px;
+  margin-left: 1vw;
 }
+
+/* -------PetAside-------- */
+.petaside-greeting {
+  text-align: center;
+  border-bottom: 1px solid white;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+/* ---------------------- */
 .modal-body{
   border: black 1px solid;
 }
