--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -3,6 +3,7 @@
 
 h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, span {
   color: white;
+  /* margin-top: 20px; */
 }
 
 header {
@@ -16,12 +17,18 @@ h1, h2, h3, h4, h5, h6 {
 p, li, td, th, blockquote, label, input, textarea, select {
   font-size: 1.2rem;
   line-height: 165%;
+  margin-top: 20px;
 }
 
 .header-p {
   margin-bottom: 1rem;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-left: 1vw;
+}
+
+.nav-item {
+  position: relative;
+  bottom: 5px;
 }
 
 /* -------PetAside-------- */
