--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -50,3 +50,13 @@ p, li, td, th, blockquote, label, input, textarea, select {
   margin-bottom: 0;
   color: black;
 }
+
+/* === lostPet "temp" ====== */
+.lostPetCard {
+  border: 1px solid white;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #1a1a1a;
+  color: white;
+}
