--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: "Nova Square", cursive;
+}
 /* === typography ====== */ 
 
 h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, span {
