--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -66,3 +66,9 @@ p, li, td, th, blockquote, label, input, textarea, select {
   background-color: #1a1a1a;
   color: white;
 }
+
+@include media-breakpoint-up(sm) {
+  .custom-class {
+    display: block;
+  }
+}
