--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, span {
 }
 
 header {
-  border: 2px solid blue;
+  border: 4px solid purple;
 }
 
 h1, h2, h3, h4, h5, h6 {
