--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, span {
   /* margin-top: 20px; */
 }
 
+.btn {
+  border: 2px solid purple;
+}
+
 header {
   border: 4px solid purple;
 }
